# Computer-Vision-AITalent-Hub

./: README.md  instruction.txt  requirements.txt  train-phone-classificator.ipynb  Архитектура CV.drawio
.dvc/: config
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/app/: factory.py
backend/app/api/: __init__.py  frontend.py  predict.py  upload_video.py
backend/app/core/: config.py  utils.py
backend/static/: asset-manifest.json  index.html
backend/static/static/css/: main.d66cad0b.css  main.d66cad0b.css.map
backend/static/static/js/: main.58cc03f1.js  main.58cc03f1.js.map
checkincar/frontend/: package.json
checkincar/frontend/src/: App.js  file-uploader.jsx  index.js
data/: .gitignore  dataset_1_phones.zip.dvc
frontend/: package-lock.json  package.json
frontend/src/: App.js  back.js  file-uploader.css  index.js  test.js
frontend/src/components/: file-uploader.jsx  image-display.jsx
frontend/src/contexts/: CurrentPageContext.js
frontend/src/styles/: file-start.css  file-uploader.css  image.css  styles.css
