[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Евгений Бакаев <ebakaev@eclient24.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
