[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Евгений Бакаев <ebakaev@eclient24.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
opencv-python = "^4.7.0.72"
torchvision = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
